--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Rubik', sans-serif;
+    border: 2px solid red;
 }
 
 #Fsec {
@@ -868,6 +869,11 @@ background-color:rgb(184,190,204);
         font-size: 0.9rem;
         text-align: center;
         padding-inline: 0.5rem;
+    }
+}
+@media screen and (max-width:420px){
+    .middiv .box1 .dis{
+        font-size: .7rem;
     }
 }
 
