--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Rubik', sans-serif;
-    border: 2px solid red;
+    /* border: 2px solid red; */
 }
 
 #Fsec {
